src/snapshots/afrotd__parser__tests__interpretation_html_8.3.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            B15 fängt Team A’s legalen Vorwärtspass (PAT-Versuch) ab und läuft
            zur Spielfeldmitte, wo er von A19 am Helmgitter ergriffen und
            getackelt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Try ist vorüber und die Strafe wird durch die
            </p>
        </details>
    </div>
</article>
