src/snapshots/afrotd__parser__tests__interpretation_html_8.3.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Zwei-Punkte-Try verursacht Team A einen illegalen
            Shift. B21 recovert einen Fumble und bei dem Return clippt B45,
            während A80 einen Gegner schlägt. B21 advanct den Ball über A’s
            Goalline.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Punkte zählen nicht, die Strafen gleichen sich aus, der
                Down wird nicht wiederholt und der Try ist vorbei. A80’s Foul
                (Schlägerei) wird beim anschließenden Kickoff oder vom
                Succeeding Spot in Extraperioden geahndet. A80 wird
                disqualifiziert.
            </p>
        </details>
    </div>
</article>
