src/snapshots/afrotd__parser__tests__interpretation_html_8.4.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.4.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 6 von der B-18. Team A’s erfolgloser Fieldgoalversuch
            berührt den Boden jenseits der neutralen Zone und springt zurück
            hinter die neutrale Zone bis zu der B-28, wo er ins Aus geht oder
            von einem der beiden Teams recovert und in dessen Besitz für dead
            erklärt wird. Der Kick wird jenseits der neutralen Zone nicht
            berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Ball, 1. und 10 von der B-28 (Regeln 6.3.6, 6.3.7 und
                8.4.2.b).
            </p>
        </details>
    </div>
</article>
