src/snapshots/afrotd__parser__tests__interpretation_html_8.4.2_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.4.2.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A snappt den Ball von der B-15, um ein Fieldgoal zu erzielen.
            Der Kick wird teilweise geblockt, überquert die neutrale Zone und
            landet an der B-12. Bevor irgendein Spieler den Ball berühren kann,
            prallt dieser zurück hinter die neutrale Zone und geht (a) an der
            B-17 und (b) an der B-25 ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Team B’s Ball, 1. und 10 von der B-17; (b) Team B’s Ball,
                1. und 10 von der B-25 (Regeln 6.3.7 und 8.4.2.b).
            </p>
        </details>
    </div>
</article>
