src/snapshots/afrotd__parser__tests__interpretation_html_8.4.2_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.4.2.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und Goal von der B-10. Beim Fieldgoalversuch wird der Ball
            geblockt und prallt an der B-7 auf den Boden. Er springt danach
            zurück bis an die B-13, wo B44 ihn mufft. A44 recovert den Ball an
            der B11.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A’s Ball, 1. und 10 von der B-11. Team B hat einen Scrimmage
                Kick berührt, der die neutrale Zone überquert hatte (Regel
                6.3.3).
            </p>
        </details>
    </div>
</article>
