src/snapshots/afrotd__parser__tests__interpretation_html_8.5.1_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.5.1.X
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-30. B44 fängt in seiner Endzone einen
            Vorwärtspass ab. Während er sich noch in der Endzone befindet,
            fumbelt er. Der Ball rollt nach vorne ins Spielfeld und beim Kampf
            um den Ball rollt dieser zurück in B’s Endzone. Anschließend (a)
            recovert B44 am Boden liegend in der Endzone den Ball oder (b)
            rollt der Ball über die Endlinie ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                In beiden Fällen Safety, zwei Punkte für Team A. Der Antrieb,
                der den Ball beim zweiten Mal in B’s Endzone brachte, wurde
                durch B44’s Fumble verursacht. Der Kampf um den Ball brachte
                keinen neuen Antrieb. Die Regel bezüglich Eigenschwung trifft
                nicht zu, da der Ball nicht in der Endzone verblieb (Regel
                8.7.2).
            </p>
        </details>
    </div>
</article>
