src/snapshots/afrotd__parser__tests__interpretation_html_8.5.1_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.5.1.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und Goal von der B-8. Runner A44 wird an der B-5 getackelt und
            fumbelt. B54 schlägt den nach Bodenberührung freien Ball an der B-3
            zurück in seine eigene Endzone. A88 sieht den freien Ball und
            recovert den Ball, der sich noch in der Endzone befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety, zwei Punkte für Team A. Das Wegschlagen ist legal, weil
                es nach hinten erfolgt (Regel 9.4.1.c), aber B54 gibt dem Ball
                einen neuen Antrieb und ist dafür verantwortlich, dass der Ball
                in B’s Endzone gelangt (Regel 8.7.2.b.1). Als A88 den Ball
                recovert, wird der Ball aufgrund der Fumble-Regel im 4. Versuch
                für dead erklärt (Regel 7.2.2.a Ausnahme 2). Die Regelung ist
                ein Safety, weil der Ball durch die Regel in der Endzone dead
                wird und B54 dafür verantwortlich ist, dass sich der Ball dort
                befindet (Regel 8.5.1.a). Die Safety-Regel und die Fumble-Regel
                im 4. Versuch scheinen hier in einem Konflikt zueinander zu
                stehen, aber Geist und Intention der Safety-Regel ist für
                diesen Spielzug die viel speziellere Regelung und hebelt die
                Fumble-Regel im 4. Versuch aus, die als generelle Regelung
                beschreibt, wie Recoveries durch Team A in einem 4. Versuch zu
                handhaben sind.
            </p>
        </details>
    </div>
</article>
