src/snapshots/afrotd__parser__tests__interpretation_html_8.5.1_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.5.1.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 fängt einen Vorwärtspass oder einen Fumble oder einen Free oder
            Scrimmage Kick zwischen seiner B-5 und der Goalline von B ab und
            sein Eigenschwung trägt ihn in die Endzone. Der Ball wird in Team
            B’s Besitz in der Endzone für dead erklärt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Ball an der Stelle, an der der Pass oder Fumble
                abgefangen oder der gegnerische Kick gefangen wurde. Die
                Regelung ist die gleiche, wenn B1 einen gegnerischen Fumble,
                einen Rückpass oder einen Kick unter ähnlichen Bedingungen
                recovert.
            </p>
        </details>
    </div>
</article>
