src/snapshots/afrotd__parser__tests__interpretation_html_8.5.1_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.5.1.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A versucht von hinter der eigenen Goalline aus zu punten, aber
            A36 mufft den Ball. Nachdem A36 den Ball recovert hat, berührt er
            einen Pylon am Schnittpunkt der Seitenlinie mit der Goalline.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety, es sei denn, der gesamte Ball befindet sich jenseits
                der Goalline, als A36 die Seitenlinie oder den Pylon berührt.
                Der Ball wird an seiner vordersten Stelle dead, wenn A36 den
                Pylon oder die Seitenlinie berührt (Regeln 2.31.3, 4.2.4.d).
            </p>
        </details>
    </div>
</article>
